cli/tests/snapshot/snapshots/snapshot__eval_stderr_naked_contract.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
warning: plain functions as contracts are deprecated
  ┌─ [INPUTS_PATH]/warnings/naked_contract.ncl:6:3
  │
3 │ let C = fun label value => value in
  │         ------------------------ this function
  ·
6 │   [1, 2] | Array C
  │   ^^^^^^ applied to this term
  │
  = use one of the constructors in `std.contract` instead, like `std.contract.custom`

warning: plain functions as contracts are deprecated
  ┌─ [INPUTS_PATH]/warnings/naked_contract.ncl:5:3
  │
3 │ let C = fun label value => value in
  │         ------------------------ this function
4 │ [
5 │   1 | C,
  │   ^ applied to this term
  │
  = use one of the constructors in `std.contract` instead, like `std.contract.custom`
