cli/tests/snapshot/snapshots/snapshot__eval_stderr_normal_array_merge_fail.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: contract broken by a value
       cannot merge unequal arrays
  ┌─ <unknown> (generated by evaluation):1:1
  │
1 │ contract.Equal some_array
  │ ------------------------- expected type
  │
  ┌─ [INPUTS_PATH]/errors/normal_array_merge_fail.ncl:3:28
  │
3 │ { a = [1, 2] } & { a = [2, 3] }
  │                            - evaluated to this expression
  │
  = This equality contract was auto-generated from a merge operation on two arrays. Arrays can only be merged if they are equal.
