cli/tests/snapshot/snapshots/snapshot__eval_stderr_piecewise_array_merge_fail.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: contract broken by a value
       cannot merge unequal arrays
  ┌─ <unknown> (generated by evaluation):1:1
  │
1 │ contract.Equal some_array
  │ ------------------------- expected type
  │
  ┌─ [INPUTS_PATH]/errors/piecewise_array_merge_fail.ncl:5:11
  │
5 │   a = [2, 3],
  │           - evaluated to this expression
  │
  = This equality contract was auto-generated from a merge operation on two arrays. Arrays can only be merged if they are equal.
  = The arrays were merged because they were assigned to the same record field piecewise. This is likely to have been a mistake. Check for duplicate definitions of the same record field.
