cli/tests/snapshot/snapshots/snapshot__eval_stderr_record_access.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: record/insert: tried to extend a record with the field bar, but it already exists


