cli/tests/snapshot/snapshots/snapshot__eval_stderr_record_get_missing_field.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: contract broken by the caller of `get`: missing field
     ┌─ <stdlib/std.ncl>:1948:9
     │
1948 │       | std.contract.unstable.HasField Dyn
     │         ---------------------------------- expected type
     │
     ┌─ <unknown> (generated by evaluation):1:1
     │
   1 │ { bar = %<closure@0x5579684fe3f8>, baz = false, }
     │ ------------------------------------------------- evaluated to this value
     │
     = The record given as an argument lacks the required field `foo`.

note: 
   ┌─ [INPUTS_PATH]/errors/record_get_missing_field.ncl:10:1
   │  
10 │ ╭ record
11 │ │ |> std.record.remove "foo"
12 │ │ |> std.record.get "foo"
   │ ╰───────────────────────' (1) calling <func>

note: 
   ┌─ [INPUTS_PATH]/errors/record_get_missing_field.ncl:12:4
   │
12 │ |> std.record.get "foo"
   │    -------------------- (2) calling get


