cli/tests/snapshot/snapshots/snapshot__eval_stderr_subcontract_type_path_underline.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: contract broken by a function
  ┌─ [INPUTS_PATH]/errors/subcontract_type_path_underline.ncl:3:37
  │
3 │ let val | Array (Array {foo: Dyn -> Number }) = [
  │                                     ------ expected return type
4 │   [],
5 │   [{ foo = fun x => "string" }]
  │                     -------- evaluated to this expression
  │
  ┌─ <generated by evaluation 0>:1:1
  │
1 │ "string"
  │ -------- evaluated to this value
