cli/tests/snapshot/snapshots/snapshot__eval_stderr_value_contract_violation.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: contract broken by the value of `foo`
       no reason
  ┌─ [INPUTS_PATH]/errors/value_contract_violation.ncl:3:36
  │
3 │ { foo | std.FailWith "no reason" = 1 }.foo
  │         ------------------------   ^ applied to this expression
  │         │                           
  │         expected type


