cli/tests/snapshot/snapshots/snapshot__eval_stderr_yaml_error_location_with_unicode.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: contract broken by a value
  ┌─ [INPUTS_PATH]/errors/yaml_error_location_with_unicode.ncl:3:79
  │
3 │ (import "../../imports/map-with-unicode.yaml") | { "tiếng" : Number, "việt" : String }
  │                                                                               ------ expected field type
  │
  ┌─ [IMPORTS_PATH]/map-with-unicode.yaml:2:7
  │
2 │ việt: 2
  │       - evaluated to this expression
